--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   go_router: ^17.0.0
   google_fonts: ^6.3.2
   just_audio: ^0.10.5
+  convex_bottom_bar: ^3.2.0
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +66,7 @@ flutter:
   assets:
   - assets/images/
   - assets/images/category/
+  - assets/images/navigation_menu/
   - assets/json/
   - assets/audio/
   #   - images/a_dot_burr.jpeg
