--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,10 +39,17 @@ dependencies:
   google_fonts: ^6.3.2
   just_audio: ^0.10.5
   convex_bottom_bar: ^3.2.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  equatable: ^2.0.8
+  flutter_bloc: ^9.1.1
+  bloc: ^9.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.6
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -50,6 +57,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+#  build_runner: 2.10.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
