--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,7 @@ flutter:
   - assets/images/
   - assets/images/category/
   - assets/images/navigation_menu/
+  - assets/images/level/
   - assets/json/
   - assets/audio/
   #   - images/a_dot_burr.jpeg
